pre mask string entry

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -37,7 +37,9 @@
           placeholder="Annual Salary"
         />
         <div class="buttons">
-          <button id="addBillButton" (click)="addBill($event)">Add Bill</button>
+          <button id="addMonthlyBillButton" (click)="addMonthlyBill($event)">
+            Add Monthly Bill
+          </button>
         </div>
       </form>
       <h2 id="registration auth formSwitchTitle">Sign Up or Sign In</h2>
