changes with firebase

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -120,6 +120,7 @@
           value="Daily Income"
           readonly
         />
+        <i class="fa-solid fa-money-bill-1"></i>
         <input
           type="text"
           class="dailyTaxes"
