--- a/src/app/home/calculator/calculator.component.html
+++ b/src/app/home/calculator/calculator.component.html
@@ -17,7 +17,7 @@
         type="text"
         name="weeklyInput"
         id="weeklyInput"
-        class="weeklyInput"
+        class="weeklyInput numberFormat"
         placeholder="Hours Worked in a Week"
       />
       <input
@@ -185,7 +185,7 @@
       />
       <input
         type="text"
-        class="yearlyTaxes"
+        class="yearly yearlyTaxes"
         id="yearlyTaxes"
         name="yearlyTaxes"
         value="Annual Taxes"
@@ -193,7 +193,7 @@
       />
       <input
         type="text"
-        class="yearlyCash"
+        class="yearly yearlyCash"
         id="yearlyCash"
         name="yearlyCash"
         value="Annual Cash"
